# api-studia

./: .env  .gitignore  README.md  __init__.py  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 06ee0261edf2_migration.py  10795f26d638_migration.py  2aff8df60e6e_migration.py  39e147a8d81d_migration.py  40a38f90e8a7_migration.py  49b2a20c7522_migration.py  7727bb2994e5_migration.py  b9f627d8cfbd_migration.py  bfcec5df63ba_migration.py  eedcb2784568_migration.py
api_studia/: app.py  modules.py
api_studia/models/: blog.py  comment.py  kelas.py  konten.py  lesson.py  media.py  modules.py  tugas.py  userkelas.py  users.py
api_studia/routes/api/: comment.py  kelas.py  konten.py  lesson.py  media.py  tugas.py  users.py
api_studia/routes/controller/: comment.py  kelas.py  konten.py  lesson.py  media.py  tugas.py  users.py
api_studia/schemas/: comment.py  kelas.py  konten.py  lesson.py  media.py  tugas.py  users.py
api_studia/service/: auth.py  db_service.py  utils.py
api_studia/sql_app/: crud.py  database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 16f8f68febe5_migration.py  426f11e45107_migration.py  49e811e56ca8_migration.py  4cac3eac802d_migration.py  788e47d64494_migration.py  88b403246851_migration.py  cd60662da7fd_migration.py
